starting react implementation and ci cd pipeline

--- a/views/list_items.html
+++ b/views/list_items.html
@@ -13,11 +13,11 @@
     <thead>
     <tr>
         <th>Name</th>
-        <th>Quantity</th>
+        <th>Qty</th>
         <th>Type</th>
         <th>Market</th>
-        <th>Added At</th>
-        <th>Added By</th>
+        <th>When</th>
+        <th>Who</th>
         <th>Actions</th>
     </tr>
     </thead>
