updating cd, removing required name

--- a/views/list_items.html
+++ b/views/list_items.html
@@ -46,7 +46,7 @@
             <!-- Existing rows of items would go here -->
             <!-- New item input row -->
             <tr>
-                <td><input type="text" name="name" class="form-control" placeholder="Name" required></td>
+                <td><input type="text" name="name" class="form-control" placeholder="Name"></td>
                 <td>
                     <select name="quantity" class="form-control" required>
                         {{range .Quantities}}
